--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@material-ui/core": "^4.12.4",
     "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.16",
-    "@mui/styles": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.0.4",
     "@testing-library/user-event": "^12.0.9",
@@ -20,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
