--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.16",
     "@mui/styles": "^5.5.0",
+    "@mui/x-date-pickers": "^5.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.0.4",
     "@testing-library/user-event": "^12.0.9",
