--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-table": "^2.0.3",
     "moment": "^2.29.4",
     "react": "^17.0.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
