--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/react": "^5.11.3",
     "@material-ui/core": "^4.12.4",
     "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.16",
