--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personaltrainer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://AkiAleksi.github.io/personaltrainer",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -16,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.0.4",
     "@testing-library/user-event": "^12.0.9",
+    "gh-pages": "^4.0.0",
     "material-table": "^2.0.3",
     "moment": "^2.29.4",
     "react": "^17.0.2",
@@ -25,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
