--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@testing-library/react": "^12.0.4",
     "@testing-library/user-event": "^12.0.9",
     "gh-pages": "^4.0.0",
+    "lodash": "^4.17.21",
     "material-table": "^2.0.3",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,9 +37,11 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "globals": { "_": true },
     "extends": [
       "react-app",
       "react-app/jest"
+      
     ]
   },
   "browserslist": {
